--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -64,4 +64,15 @@
         </RadioGroup>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/buttonLongPress"
+        android:text="Me pressione lentamente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:src="@drawable/serveimage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
